Apply overflow fixes to main file

--- a/styles.css
+++ b/styles.css
@@ -33,16 +33,27 @@ nav,
 .hero {
     margin-left: auto;
     margin-right: auto;
-    width: 1100px;
+    max-width: 1100px;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: center;
+}
+
+.hero {
+    flex-wrap: wrap;
+}
+
+.hero-image {
+    overflow: hidden;
 }
 
 .hero-left-pane {
+    margin-right: auto;
     width: 460px;
 }
 
 .header-links {
+    margin-left: auto;
     display: flex;
     gap: 20px;
 }
@@ -125,6 +136,7 @@ button {
 
 .info-images {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-bottom: 120px;
@@ -141,6 +153,7 @@ figure {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     padding: 100px 0;
     margin: 0 auto;
 }
@@ -157,23 +170,23 @@ figure {
     justify-content: flex-end;
     font-weight: 900;
     font-size: 28px;
+    width: 100%;
 }
 
 .quote-text,
 .quote-author {
-    width: 880px;
+    max-width: 880px;
     margin: 0 auto;
 }
 
 .call-card-container {
     background-color: #3882F6;
-    width: 1050px;
+    max-width: 950px;
     border-radius: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 55px 0;
-    gap: 180px;
+    padding: 55px 80px;
     margin: 90px auto;
 }
 
